--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 ### Example user template template
 ### Example user template
 
+
 # IntelliJ project files
 .idea
 *.iml
@@ -34,3 +35,35 @@ build/
 
 *.patch
 **/*.class
+
+# Compiled source #
+###################
+*.com
+*.class
+*.dll
+*.exe
+*.o
+*.so
+
+# Packages #
+############
+# it's better to unpack these files and commit the raw source
+# git has its own built in compression methods
+*.7z
+*.dmg
+*.gz
+*.iso
+*.jar
+*.rar
+*.tar
+*.zip
+
+# OS generated files #
+######################
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
